# voter

./: .gitignore  .gitmodules  API  CMakeLists.txt  README.md
src/: commands_handler.cc  commands_handler.hh  handler.cc  handler.hh  room.cc  room.hh  room_manager.cc  room_manager.hh  router.cc  router.hh  user.cc  user.hh  utils.hh  voter.cc
